// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionButton loading={false} /> renders correctly 1`] = `
<View
  accessibilityHint="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderRadius": 10,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 10,
        "padding": 15,
      },
      {
        "marginTop": 10,
      },
      false,
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#7A7878",
          "fontSize": 16,
        },
        undefined,
      ]
    }
  >
    Press me
  </Text>
  <Text />
</View>
`;

exports[`<ActionButton loading={true} /> renders correctly 1`] = `
<View
  accessibilityHint="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderRadius": 10,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 10,
        "padding": 15,
      },
      {
        "marginTop": 10,
      },
      false,
    ]
  }
>
  <ActivityIndicator
    color="#232222"
    size="small"
  />
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#232222",
          "fontSize": 22,
        },
        undefined,
        {
          "fontFamily": "material-community",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    󰅂
  </Text>
</View>
`;
